Added some notes on state-space control for SO(2)

--- a/Chap-02-S1.ipynb
+++ b/Chap-02-S1.ipynb
@@ -8922,6 +8922,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Preview: State-Space Control (optimal control)\n",
+    "\n",
+    "The previous sections explored PID control on a manifold as a relatively straightforward application of control theory to manifolds. This section is a slightly more rigorous exploration of state-space control methods including optimal control.\n",
+    "\n",
+    "#### Vector space approach\n",
+    "\n",
+    "We would usually like to write our system state as a vector, which in the case of the azimuth control problem would look like\n",
+    "\\begin{equation}\n",
+    "\\mathbf{x} = \\begin{bmatrix} \\theta \\\\ \\omega \\end{bmatrix} \\in \\mathbb{R}^2\n",
+    "\\end{equation}\n",
+    "In order to track some reference trajectory $\\mathbf{x}_\\text{ref} \\in \\mathbb{R}^2$, we find the reference input $\\mathbf{u}_\\text{ref}$ such that $(\\mathbf{x}_\\text{ref}, \\mathbf{u}_\\text{ref})$ is an equilibrium point of the system. We then perform a change of variables as\n",
+    "\\begin{align}\n",
+    "\\tilde{\\mathbf{x}} &= \\mathbf{x} - \\mathbf{x}_\\text{ref} \\;, \\\\\n",
+    "\\tilde{\\mathbf{u}} &= \\mathbf{u} - \\mathbf{u}_\\text{ref} \\;.\n",
+    "\\end{align}\n",
+    "We can then compute the control as if for a regulation problem (driving the state to zero) as\n",
+    "\\begin{equation}\n",
+    "\\tilde{\\mathbf{u}} = -\\mathbf{K} \\tilde{\\mathbf{x}} \\;,\n",
+    "\\end{equation}\n",
+    "where finding the control gains matrix $\\mathbf{K}$ is the subject of optimal control theory. The total control is given by\n",
+    "\\begin{align}\n",
+    "\\mathbf{u} &= -\\mathbf{K} \\tilde{\\mathbf{x}} + \\mathbf{u}_\\text{ref} \\\\\n",
+    "\\mathbf{u} &= -\\mathbf{K} \\left( \\mathbf{x} - \\mathbf{x}_\\text{ref} \\right) + \\mathbf{u}_\\text{ref} \\;.\n",
+    "\\end{align}\n",
+    "\n",
+    "#### Manifold approach\n",
+    "\n",
+    "For a system state that has elements that are members of a Lie group, this approach won't work without modification because we're not in a vector space and so we don't have addition or subtraction. Instead, for the azimuth control case we would define our state as\n",
+    "\\begin{equation}\n",
+    "\\mathbf{x} = \\left( \\Phi, \\omega \\right) \\in SO(2) \\times \\mathbb{R} \\;,\n",
+    "\\end{equation}\n",
+    "which is not a member of a vector space. Using the $\\boxplus$/$\\boxminus$ notation, we would define our error state $\\tilde{\\mathbf{x}} \\in \\mathbb{R}^2$ as \n",
+    "\\begin{align}\n",
+    "\\tilde{\\mathbf{x}} &= \\mathbf{x} \\boxminus \\mathbf{x}_\\text{ref} \\;, \\\\\n",
+    "\\tilde{\\mathbf{u}} &= \\mathbf{u} - \\mathbf{u}_\\text{ref} \\;.\n",
+    "\\end{align}\n",
+    "Here $\\boxminus$ act appropriately for each element of $\\mathbf{x}$, so that for the azimuth control case we would have\n",
+    "\\begin{equation}\n",
+    "\\mathbf{x} \\boxminus \\mathbf{x}_\\text{ref} = \\begin{bmatrix} \\log\\left( \\Phi \\circ \\Phi_\\text{ref}^{-1} \\right)^\\vee \\\\ \\omega - \\omega_\\text{ref} \\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "We would then, as above, have our control law as\n",
+    "\\begin{align}\n",
+    "\\tilde{\\mathbf{u}} &= -\\mathbf{K} \\tilde{\\mathbf{x}} \\;, \\\\\n",
+    "\\mathbf{u} &= -\\mathbf{K} \\tilde{\\mathbf{x}} + \\mathbf{u}_\\text{ref} \\;.\n",
+    "\\end{align}\n",
+    "\n",
+    "---\n",
+    "\n",
+    "The open question now is how to choose $\\mathbf{K}$ for a manifold system. Usually we'd have have\n",
+    "\\begin{equation}\n",
+    "\\dot{\\mathbf{x}} = \\mathbf{A} \\mathbf{x} + \\mathbf{B} \\mathbf{u}\n",
+    "\\end{equation}\n",
+    "and choose $\\mathbf{K}$ based on $\\mathbf{A}$ and $\\mathbf{B}$ (and maybe $\\mathbf{C}$ and $\\mathbf{C}$), but we can't write that because it's not a vector! So we'd have to transform our dynamics into error space and do our work there, e.g.\n",
+    "\\begin{equation}\n",
+    "\\dot{\\tilde{\\mathbf{x}}} = \\bar{\\mathbf{A}} \\tilde{\\mathbf{x}} + \\bar{\\mathbf{B}} \\tilde{\\mathbf{u}}\n",
+    "\\end{equation}\n",
+    "Or, it seems like in the literature this is where a bunch of the adjoint stuff shows up."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Estimation\n",
     "\n",
     "Devon"
