fixed negative sign error in optimization

--- a/Unit 1: The Unit Circle S1/1.2 Optimization (Gradient Descent) on S1.ipynb
+++ b/Unit 1: The Unit Circle S1/1.2 Optimization (Gradient Descent) on S1.ipynb
@@ -146,7 +146,7 @@
     "\n",
     "\\begin{align}\n",
     "\\boxplus & :SO\\left(2\\right)\\times\\mathbb{R}^{1}\\rightarrow SO\\left(2\\right),\\\\\n",
-    "R\\boxplus\\delta & =\\exp\\left(-\\delta^{\\times}\\right)R,\n",
+    "R\\boxplus\\delta & =\\exp\\left(\\delta^{\\times}\\right)R,\n",
     "\\end{align}\n",
     "where\n",
     "\n",
@@ -165,12 +165,12 @@
     "\n",
     "\\begin{align}\n",
     "\\frac{\\partial{\\bf e}}{\\partial R} & =\\lim_{\\epsilon\\rightarrow0}\\frac{1}{\\epsilon}\\left[\\left({\\bf l}_{i}^{b}-\\left(R_{a}^{b}\\boxplus\\epsilon\\right){\\bf l}_{i}^{a}+{\\bf t}^{b}\\right)-\\left({\\bf l}_{i}^{b}-R_{a}^{b}{\\bf l}_{i}^{a}+{\\bf t}^{b}\\right)\\right]\\\\\n",
-    " & =\\lim_{\\epsilon\\rightarrow0}\\frac{1}{\\epsilon}\\left[-\\left(\\exp\\left(-{\\bf 1}^{\\times}\\epsilon\\right)R_{a}^{b}\\right){\\bf l}_{i}^{a}+R_{a}^{b}{\\bf l}_{i}^{a}\\right]\\\\\n",
-    " & =\\lim_{\\epsilon\\rightarrow0}\\frac{1}{\\epsilon}\\left[-\\left(\\left(I-{\\bf 1}^{\\times}\\epsilon\\right)R_{a}^{b}\\right){\\bf l}_{i}^{a}+R_{a}^{b}{\\bf l}^{a}\\right]\\\\\n",
-    " & =\\lim_{\\epsilon\\rightarrow0}\\frac{1}{\\epsilon}\\left[-\\left(R_{a}^{b}-{\\bf 1}^{\\times}R_{a}^{b}\\epsilon\\right){\\bf l}_{i}^{a}+R_{a}^{b}{\\bf l}_{i}^{a}\\right]\\\\\n",
-    " & =\\lim_{\\epsilon\\rightarrow0}\\frac{1}{\\epsilon}\\left[-R_{a}^{b}{\\bf l}_{i}^{a}+{\\bf 1}^{\\times}R_{a}^{b}{\\bf l}_{i}^{a}\\epsilon+R_{a}^{b}{\\bf l}_{i}^{a}\\right]\\\\\n",
-    " & =\\lim_{\\epsilon\\rightarrow0}\\frac{1}{\\epsilon}\\left[{\\bf 1}^{\\times}R_{a}^{b}{\\bf l}_{i}^{a}\\epsilon\\right]\\\\\n",
-    " & ={\\bf 1}^{\\times}R_{a}^{b}{\\bf l}_{i}^{a}.\n",
+    " & =\\lim_{\\epsilon\\rightarrow0}\\frac{1}{\\epsilon}\\left[-\\left(\\exp\\left({\\bf 1}^{\\times}\\epsilon\\right)R_{a}^{b}\\right){\\bf l}_{i}^{a}+R_{a}^{b}{\\bf l}_{i}^{a}\\right]\\\\\n",
+    " & =\\lim_{\\epsilon\\rightarrow0}\\frac{1}{\\epsilon}\\left[-\\left(\\left(I+{\\bf 1}^{\\times}\\epsilon\\right)R_{a}^{b}\\right){\\bf l}_{i}^{a}+R_{a}^{b}{\\bf l}^{a}\\right]\\\\\n",
+    " & =\\lim_{\\epsilon\\rightarrow0}\\frac{1}{\\epsilon}\\left[-\\left(R_{a}^{b}+{\\bf 1}^{\\times}R_{a}^{b}\\epsilon\\right){\\bf l}_{i}^{a}+R_{a}^{b}{\\bf l}_{i}^{a}\\right]\\\\\n",
+    " & =\\lim_{\\epsilon\\rightarrow0}\\frac{1}{\\epsilon}\\left[-R_{a}^{b}{\\bf l}_{i}^{a}-{\\bf 1}^{\\times}R_{a}^{b}{\\bf l}_{i}^{a}\\epsilon+R_{a}^{b}{\\bf l}_{i}^{a}\\right]\\\\\n",
+    " & =\\lim_{\\epsilon\\rightarrow0}\\frac{1}{\\epsilon}\\left[-{\\bf 1}^{\\times}R_{a}^{b}{\\bf l}_{i}^{a}\\epsilon\\right]\\\\\n",
+    " & =-{\\bf 1}^{\\times}R_{a}^{b}{\\bf l}_{i}^{a}.\n",
     "\\end{align}\n",
     "\n",
     "The Gauss-Newton algorithm is explained well on its [wikipedia page](https://en.wikipedia.org/wiki/Gauss%E2%80%93Newton_algorithm) . Gauss-Newton can give us an update vector for $N$ landmark measurement\n",
@@ -273,13 +273,13 @@
     "            rlist += [rerr(e)]\n",
     "\n",
     "            # jacobian\n",
-    "            J[j,0] = e.transpose().dot(onex.dot(Rhat).dot(la[:,j:j+1]))\n",
+    "            J[j,0] = -e.transpose().dot(onex.dot(Rhat).dot(la[:,j:j+1]))\n",
     "            J[j,1:] = -e.transpose()\n",
     "        r = vstack(rlist)\n",
     "\n",
     "        # update estimates\n",
     "        delta = -pinv(J).dot(r)\n",
-    "        Rhat = expSO2(-delta[0,0]).dot(Rhat)\n",
+    "        Rhat = expSO2(delta[0,0]).dot(Rhat)\n",
     "        that += delta[1:,0:1]\n",
     "\n",
     "        # stop iterations when change is small\n",
@@ -308,7 +308,7 @@
     "                rlist += [rerr(e)]\n",
     "\n",
     "                # jacobian\n",
-    "                J[j,0] = e.transpose().dot(onex.dot(Rhat).dot(la[:,j:j+1]))\n",
+    "                J[j,0] = -e.transpose().dot(onex.dot(Rhat).dot(la[:,j:j+1]))\n",
     "                J[j,1:] = -e.transpose()\n",
     "            r = vstack(rlist)\n",
     "            H = J.transpose().dot(J)\n",
@@ -320,7 +320,7 @@
     "\n",
     "        # update estimates\n",
     "        delta = -pinv(H_damped).dot(J.transpose()).dot(r)\n",
-    "        Rnew = expSO2(-delta[0,0]).dot(Rhat)\n",
+    "        Rnew = expSO2(delta[0,0]).dot(Rhat)\n",
     "        tnew = that + delta[1:,0:1]\n",
     "\n",
     "        # check squared error with new transform\n",
